// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components /Button Button in desktop screen 1`] = `
<div
  className="MuiBox-root-19uv1fm MuiBox-root-6"
>
  <div
    className="MuiBox-root-19uv1fm MuiBox-root-7"
  >
    <button
      className="MuiButtonBase-root-kkazfa MuiButton-root-qood0l MuiButton-contained-rucpw4 MuiButton-containedPrimary-p86bkm"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-evs3l3"
      >
        Hower
      </span>
      <span
        className="MuiTouchRipple-root-t494z3"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-19uv1fm MuiBox-root-8"
  >
    <button
      className="MuiButtonBase-root-kkazfa MuiButtonBase-disabled-dw5jxs MuiButton-root-qood0l MuiButton-contained-rucpw4 MuiButton-containedPrimary-p86bkm MuiButton-disabled-dw5jxs"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-evs3l3"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-19uv1fm MuiBox-root-9"
  >
    <button
      className="MuiButtonBase-root-kkazfa MuiButton-root-qood0l MuiButton-contained-rucpw4 MuiButton-containedSecondary-12tote8"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-evs3l3"
      >
        Cancel
      </span>
      <span
        className="MuiTouchRipple-root-t494z3"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-19uv1fm MuiBox-root-10"
  >
    <button
      className="MuiButtonBase-root-kkazfa MuiButton-root-qood0l MuiButton-contained-rucpw4 MuiButton-containedPrimary-p86bkm MuiButton-fullWidth-lvxbjr"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-evs3l3"
      >
        Full Width
      </span>
      <span
        className="MuiTouchRipple-root-t494z3"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components /Button Button in phone screen 1`] = `
<div
  style={
    Object {
      "width": "425px",
    }
  }
>
  <div
    className="MuiBox-root-19uv1fm MuiBox-root-1"
  >
    <div
      className="MuiBox-root-19uv1fm MuiBox-root-2"
    >
      <button
        className="MuiButtonBase-root-kkazfa MuiButton-root-qood0l MuiButton-contained-rucpw4 MuiButton-containedPrimary-p86bkm"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-evs3l3"
        >
          Hower
        </span>
        <span
          className="MuiTouchRipple-root-t494z3"
        />
      </button>
    </div>
    <div
      className="MuiBox-root-19uv1fm MuiBox-root-3"
    >
      <button
        className="MuiButtonBase-root-kkazfa MuiButtonBase-disabled-dw5jxs MuiButton-root-qood0l MuiButton-contained-rucpw4 MuiButton-containedPrimary-p86bkm MuiButton-disabled-dw5jxs"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label-evs3l3"
        >
          Disabled
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-19uv1fm MuiBox-root-4"
    >
      <button
        className="MuiButtonBase-root-kkazfa MuiButton-root-qood0l MuiButton-contained-rucpw4 MuiButton-containedSecondary-12tote8"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-evs3l3"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root-t494z3"
        />
      </button>
    </div>
    <div
      className="MuiBox-root-19uv1fm MuiBox-root-5"
    >
      <button
        className="MuiButtonBase-root-kkazfa MuiButton-root-qood0l MuiButton-contained-rucpw4 MuiButton-containedPrimary-p86bkm MuiButton-fullWidth-lvxbjr"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-evs3l3"
        >
          Full Width
        </span>
        <span
          className="MuiTouchRipple-root-t494z3"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components /forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-1u9du9o MuiFormControl-marginNormal-f3570a MuiTextField-root-uj0ye4"
  >
    <label
      className="MuiFormLabel-root-161fy9m MuiInputLabel-root-106wrol MuiInputLabel-formControl-1egs64z MuiInputLabel-animated-16jb9gm MuiInputLabel-shrink-1fpyslk"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-p1flee MuiOutlinedInput-root-18e9mwr MuiInputBase-formControl-1qwhnfq"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-1d0n17z MuiOutlinedInput-notchedOutline-1ipg4bi"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-dakx2c"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-18s8xn1 MuiOutlinedInput-input-16mbbbq"
        disabled={false}
        name="uniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-kkazfa MuiButtonBase-disabled-dw5jxs MuiButton-root-qood0l MuiButton-contained-rucpw4 MuiButton-containedPrimary-p86bkm MuiButton-disabled-dw5jxs"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-evs3l3"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components /forms TextField 1`] = `
<div
  className="MuiBox-root-19uv1fm MuiBox-root-13"
>
  <div
    className="MuiBox-root-19uv1fm MuiBox-root-14"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1u9du9o MuiFormControl-marginNormal-f3570a MuiTextField-root-uj0ye4"
      >
        <label
          className="MuiFormLabel-root-161fy9m MuiFormLabel-error-1u7o52f MuiInputLabel-error-7lc1nk MuiInputLabel-root-106wrol MuiInputLabel-formControl-1egs64z MuiInputLabel-animated-16jb9gm MuiInputLabel-shrink-1fpyslk"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root-p1flee MuiOutlinedInput-root-18e9mwr MuiInputBase-error-1u7o52f MuiOutlinedInput-error-1ui6612 MuiInputBase-formControl-1qwhnfq"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-1d0n17z MuiOutlinedInput-notchedOutline-1ipg4bi"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-dakx2c"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input-18s8xn1 MuiOutlinedInput-input-16mbbbq"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root-yf97fs MuiFormHelperText-contained-o3zsd8 MuiFormHelperText-error-1u7o52f"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-19uv1fm MuiBox-root-15"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1u9du9o MuiFormControl-marginNormal-f3570a MuiTextField-root-uj0ye4"
      >
        <label
          className="MuiFormLabel-root-161fy9m MuiInputLabel-root-106wrol MuiInputLabel-formControl-1egs64z MuiInputLabel-animated-16jb9gm MuiInputLabel-shrink-1fpyslk"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root-p1flee MuiOutlinedInput-root-18e9mwr MuiInputBase-formControl-1qwhnfq"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-1d0n17z MuiOutlinedInput-notchedOutline-1ipg4bi"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-dakx2c"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-18s8xn1 MuiOutlinedInput-input-16mbbbq"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-19uv1fm MuiBox-root-16"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1u9du9o MuiFormControl-marginNormal-f3570a MuiTextField-root-uj0ye4"
      >
        <label
          className="MuiFormLabel-root-161fy9m MuiFormLabel-disabled-dw5jxs MuiInputLabel-disabled-dw5jxs MuiInputLabel-root-106wrol MuiInputLabel-formControl-1egs64z MuiInputLabel-animated-16jb9gm MuiInputLabel-shrink-1fpyslk"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root-p1flee MuiOutlinedInput-root-18e9mwr MuiInputBase-disabled-dw5jxs MuiOutlinedInput-disabled-dw5jxs MuiInputBase-formControl-1qwhnfq"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-1d0n17z MuiOutlinedInput-notchedOutline-1ipg4bi"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-dakx2c"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-18s8xn1 MuiOutlinedInput-input-16mbbbq MuiInputBase-disabled-dw5jxs MuiOutlinedInput-disabled-dw5jxs"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-19uv1fm MuiBox-root-17"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1u9du9o MuiFormControl-marginNormal-f3570a MuiTextField-root-uj0ye4"
      >
        <label
          className="MuiFormLabel-root-161fy9m MuiInputLabel-root-106wrol MuiInputLabel-formControl-1egs64z MuiInputLabel-animated-16jb9gm MuiInputLabel-shrink-1fpyslk"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-p1flee MuiOutlinedInput-root-18e9mwr MuiInputBase-formControl-1qwhnfq"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-1d0n17z MuiOutlinedInput-notchedOutline-1ipg4bi"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-dakx2c"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-18s8xn1 MuiOutlinedInput-input-16mbbbq"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Components Images 1`] = `
<img
  alt="Iov Logo"
  className="Hook-root-z8j3qi"
  src="iov-logo.png"
/>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root-19uv1fm MuiBox-root-11"
  >
    <label
      className="MuiFormControlLabel-root-10brd8i"
    >
      <span
        className="MuiSwitch-root-12sa24v"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-kkazfa MuiIconButton-root-jadycz MuiPrivateSwitchBase-root-xgpxj3 MuiSwitch-switchBase-l266i3 MuiSwitch-colorPrimary-19z8adu"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-eyr61i"
          >
            <span
              className="MuiSwitch-icon-x1mfuv"
            />
            <input
              className="MuiPrivateSwitchBase-input-1xj79mr"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root-t494z3"
          />
        </span>
        <span
          className="MuiSwitch-bar-1s3389s"
        />
      </span>
      <span
        className="MuiTypography-root-u4wjtk MuiTypography-body2-zs7j0i MuiFormControlLabel-label-173s3z5"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root-19uv1fm MuiBox-root-12"
  >
    <label
      className="MuiFormControlLabel-root-10brd8i"
    >
      <span
        className="MuiSwitch-root-12sa24v"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-kkazfa MuiIconButton-root-jadycz MuiPrivateSwitchBase-root-xgpxj3 MuiSwitch-switchBase-l266i3 MuiSwitch-colorPrimary-19z8adu"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-eyr61i"
          >
            <span
              className="MuiSwitch-icon-x1mfuv"
            />
            <input
              className="MuiPrivateSwitchBase-input-1xj79mr"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root-t494z3"
          />
        </span>
        <span
          className="MuiSwitch-bar-1s3389s"
        />
      </span>
      <span
        className="MuiTypography-root-u4wjtk MuiTypography-body2-zs7j0i MuiFormControlLabel-label-173s3z5"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root-u4wjtk MuiTypography-subtitle1-1ahrb5f MuiTypography-colorPrimary-rncytn"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root-u4wjtk MuiTypography-h4-1uanw99"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root-u4wjtk MuiTypography-subtitle1-1ahrb5f MuiTypography-colorPrimary-rncytn"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root-u4wjtk MuiTypography-h5-1d8iub3"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root-u4wjtk MuiTypography-subtitle1-1ahrb5f MuiTypography-colorPrimary-rncytn"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root-u4wjtk MuiTypography-h6-11ympd"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root-u4wjtk MuiTypography-subtitle1-1ahrb5f MuiTypography-colorPrimary-rncytn"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root-u4wjtk MuiTypography-body1-1rnc6bo"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-u4wjtk MuiTypography-subtitle1-1ahrb5f MuiTypography-colorPrimary-rncytn"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root-u4wjtk MuiTypography-body2-zs7j0i"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-u4wjtk MuiTypography-subtitle1-1ahrb5f MuiTypography-colorPrimary-rncytn"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root-u4wjtk MuiTypography-subtitle1-1ahrb5f"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-u4wjtk MuiTypography-subtitle1-1ahrb5f MuiTypography-colorPrimary-rncytn"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root-u4wjtk MuiTypography-subtitle2-afnj1n"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-u4wjtk MuiTypography-subtitle1-1ahrb5f MuiTypography-colorPrimary-rncytn"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root-u4wjtk MuiTypography-subtitle2-afnj1n MuiTypography-colorPrimary-rncytn Hook-inline-42z04s"
  >
    First part of the text. 
  </h6>,
  <h6
    className="MuiTypography-root-u4wjtk MuiTypography-subtitle2-afnj1n Hook-inline-42z04s"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Routes/Signup New account page 1`] = `
<div
  className="MuiBox-root-19uv1fm MuiBox-root-18"
  id="/signup_first"
>
  <h4
    className="MuiTypography-root-u4wjtk MuiTypography-h4-1uanw99 MuiTypography-colorPrimary-rncytn Hook-inline-42z04s"
  >
    New
  </h4>
  <h4
    className="MuiTypography-root-u4wjtk MuiTypography-h4-1uanw99 Hook-inline-42z04s"
  >
     Account
  </h4>
  <div
    className="MuiBox-root-19uv1fm MuiBox-root-19"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-19uv1fm MuiBox-root-20"
      >
        <div
          className="MuiFormControl-root-1u9du9o MuiFormControl-marginNormal-f3570a MuiFormControl-fullWidth-lvxbjr MuiTextField-root-uj0ye4"
        >
          <label
            className="MuiFormLabel-root-161fy9m MuiFormLabel-required-1leww9n MuiInputLabel-required-1leww9n MuiInputLabel-root-106wrol MuiInputLabel-formControl-1egs64z MuiInputLabel-animated-16jb9gm MuiInputLabel-shrink-1fpyslk"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk-h72sz2 MuiInputLabel-asterisk-42zz4k"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root-p1flee MuiOutlinedInput-root-18e9mwr MuiInputBase-fullWidth-lvxbjr MuiInputBase-formControl-1qwhnfq"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1d0n17z MuiOutlinedInput-notchedOutline-1ipg4bi"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-dakx2c"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-18s8xn1 MuiOutlinedInput-input-16mbbbq"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-19uv1fm MuiBox-root-21"
      >
        <div
          className="MuiFormControl-root-1u9du9o MuiFormControl-marginNormal-f3570a MuiFormControl-fullWidth-lvxbjr MuiTextField-root-uj0ye4"
        >
          <label
            className="MuiFormLabel-root-161fy9m MuiFormLabel-required-1leww9n MuiInputLabel-required-1leww9n MuiInputLabel-root-106wrol MuiInputLabel-formControl-1egs64z MuiInputLabel-animated-16jb9gm MuiInputLabel-shrink-1fpyslk"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk-h72sz2 MuiInputLabel-asterisk-42zz4k"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root-p1flee MuiOutlinedInput-root-18e9mwr MuiInputBase-fullWidth-lvxbjr MuiInputBase-formControl-1qwhnfq"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1d0n17z MuiOutlinedInput-notchedOutline-1ipg4bi"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-dakx2c"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-18s8xn1 MuiOutlinedInput-input-16mbbbq MuiInputBase-inputType-1l6nqje"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-19uv1fm MuiBox-root-22"
      >
        <div
          className="MuiFormControl-root-1u9du9o MuiFormControl-marginNormal-f3570a MuiFormControl-fullWidth-lvxbjr MuiTextField-root-uj0ye4"
        >
          <label
            className="MuiFormLabel-root-161fy9m MuiFormLabel-required-1leww9n MuiInputLabel-required-1leww9n MuiInputLabel-root-106wrol MuiInputLabel-formControl-1egs64z MuiInputLabel-animated-16jb9gm MuiInputLabel-shrink-1fpyslk"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk-h72sz2 MuiInputLabel-asterisk-42zz4k"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root-p1flee MuiOutlinedInput-root-18e9mwr MuiInputBase-fullWidth-lvxbjr MuiInputBase-formControl-1qwhnfq"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1d0n17z MuiOutlinedInput-notchedOutline-1ipg4bi"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-dakx2c"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-18s8xn1 MuiOutlinedInput-input-16mbbbq MuiInputBase-inputType-1l6nqje"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-19uv1fm MuiBox-root-23"
      >
        <button
          className="MuiButtonBase-root-kkazfa MuiButtonBase-disabled-dw5jxs MuiButton-root-qood0l MuiButton-contained-rucpw4 MuiButton-containedPrimary-p86bkm MuiButton-disabled-dw5jxs"
          disabled={true}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="-1"
          type="submit"
        >
          <span
            className="MuiButton-label-evs3l3"
          >
            Continue
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-19uv1fm MuiBox-root-24"
  >
    <img
      alt="IOV logo"
      className="Hook-root-z8j3qi"
      src="iov-logo.png"
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root-19uv1fm MuiBox-root-25"
  id="/welcome"
>
  <h4
    className="MuiTypography-root-u4wjtk MuiTypography-h4-1uanw99 MuiTypography-colorPrimary-rncytn Hook-inline-42z04s"
  >
    Welcome
  </h4>
  <h4
    className="MuiTypography-root-u4wjtk MuiTypography-h4-1uanw99 Hook-inline-42z04s"
  >
     to your IOV manager
  </h4>
  <div
    className="MuiBox-root-19uv1fm MuiBox-root-26"
  >
    <p
      className="MuiTypography-root-u4wjtk MuiTypography-body1-1rnc6bo Hook-inline-42z04s"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root-19uv1fm MuiBox-root-27"
    />
    <button
      className="MuiButtonBase-root-kkazfa MuiButton-root-qood0l MuiButton-contained-rucpw4 MuiButton-containedPrimary-p86bkm MuiButton-fullWidth-lvxbjr"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="contained"
    >
      <span
        className="MuiButton-label-evs3l3"
      >
        Log in
      </span>
      <span
        className="MuiTouchRipple-root-t494z3"
      />
    </button>
    <div
      className="MuiBox-root-19uv1fm MuiBox-root-28"
    />
    <button
      className="MuiButtonBase-root-kkazfa MuiButton-root-qood0l MuiButton-contained-rucpw4 MuiButton-containedPrimary-p86bkm MuiButton-fullWidth-lvxbjr"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="contained"
    >
      <span
        className="MuiButton-label-evs3l3"
      >
        New account
      </span>
      <span
        className="MuiTouchRipple-root-t494z3"
      />
    </button>
    <div
      className="MuiBox-root-19uv1fm MuiBox-root-29"
    />
    <button
      className="MuiButtonBase-root-kkazfa MuiButton-root-qood0l MuiButton-contained-rucpw4 MuiButton-containedPrimary-p86bkm MuiButton-fullWidth-lvxbjr"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="contained"
    >
      <span
        className="MuiButton-label-evs3l3"
      >
        Import account
      </span>
      <span
        className="MuiTouchRipple-root-t494z3"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-19uv1fm MuiBox-root-30"
  >
    <img
      alt="IOV logo"
      className="Hook-root-z8j3qi"
      src="iov-logo.png"
    />
  </div>
</div>
`;
